--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "@vercel/analytics": "^1.5.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
     "lenis": "^1.3.1",
     "lucide-react": "^0.475.0",
